<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/check_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_days_for_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/check_best_date"
        app:layout_constraintEnd_toStartOf="@id/days"/>

    <TextView
        android:id="@+id/days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/best_date"
        app:layout_constraintTop_toTopOf="@id/check_days"
        app:layout_constraintStart_toEndOf="@id/check_days"/>
    <Button
        android:id="@+id/check_best_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_best_date"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/best_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/delete_all_trips"
         />
    <TextView
        android:id="@+id/best_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NA"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_first"
        app:layout_constraintTop_toTopOf="@id/check_best_date"
        app:layout_constraintStart_toEndOf="@id/check_best_date"
        />
    <Button
        android:id="@+id/delete_all_trips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_all_trips"

        app:layout_constraintTop_toBottomOf="@id/check_best_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_first"
      />

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_trips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/delete_all_trips"

        app:layout_constraintStart_toEndOf="@id/delete_all_trips"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        tools:listitem="@layout/recyclerview_item"
        android:padding="@dimen/big_padding"
        app:layout_constraintTop_toBottomOf="@id/button_first"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>